--- a/src/popover/update-popover/update-popover.component.html
+++ b/src/popover/update-popover/update-popover.component.html
@@ -1,28 +1,24 @@
-<ion-header class="ion-margin-top">
-  <ion-toolbar class="ion-text-center">
-    <ion-buttons [style.visibility]="'hidden'" slot="start">
-      <ion-button (click)="dismiss()" tappable>
-        <ion-icon class="icon-black" name="close-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>
-      {{"UPDATE_TITLE" | translate}}
-    </ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="dismiss()" tappable>
-        <ion-icon class="icon-black" name="close-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 <ion-content>
   <ion-slides #slider [options]="slideOpts" pager="true">
-    <ion-slide *ngFor="let version of versions">
-     {{version}}
-    </ion-slide>
+    <ion-slide *ngFor="let version of versions;let last = last">
+      <div class="ion-padding-top">
+        <div>
+          <ion-title>
+            {{"UPDATE_TEXT_TITLE_TITLE." + version + ".TITLE" | translate}}
+          </ion-title>
+          <div [innerHTML]="'UPDATE_TEXT_TITLE_TITLE.' + version + '.DESCRIPTION' | translate">
 
+          </div>
+        </div>
+        <ion-row class="ion-padding-top">
+          <ion-col size="3"></ion-col>
+          <ion-col size="6">
+            <ion-button (click)="nextSlide()" *ngIf="!last" color="accent" expand="block" tappable>{{"NEXT" | translate}}</ion-button>
+            <ion-button (click)="finish()" *ngIf="last" color="accent" expand="block" tappable>{{"UNDERSTOOD" | translate}}</ion-button>
+          </ion-col>
+          <ion-col size="3"></ion-col>
+        </ion-row>
+      </div>
+    </ion-slide>
   </ion-slides>
 </ion-content>
-<ion-footer class="ion-no-border">
-
-</ion-footer>
